--- a/templates/src/styl/common/footer.styl
+++ b/templates/src/styl/common/footer.styl
@@ -11,10 +11,14 @@
   
   .tablet &
     width 69rem
+    padding-top 3.3rem
+    padding-bottom 0
 
   .mobile &
     flex-direction column
     width 51rem
+    padding-top 2.5rem
+    padding-bottom 3.6rem
 
   &--left
     width 21rem
@@ -30,6 +34,13 @@
     align-items center
     margin-bottom 4rem
     margin-left 0.8rem
+
+
+    .tablet &,
+    .mobile &
+      margin-left 0
+      margin-bottom 2.7rem
+
     i 
       color $purple
       font-size: 1.8rem
@@ -56,6 +67,11 @@
     margin-bottom 1.7rem
   
   &--address
+
+    .tablet &,
+    .mobile &
+      margin-top 1.5rem
+
     &__detail
       color $darkgray
       font-size: 1.4rem
@@ -64,11 +80,16 @@
       font-size: 1.4rem
       line-height 1.8rem
 
+      .tablet &,
+      .mobile &
+        line-height 5.5rem
+        font-size 1.6rem
+
   &--nav
     width 87rem
     
     .tablet &
-      width calc(100% - 35rem)
+      width calc(100% - 30rem)
 
     .mobile &
       width 100%
@@ -81,6 +102,8 @@
           display block
           i
             border 0
+            font-size: 2rem
+            margin-top 1.1rem
 
       .faq
         &__heading
@@ -90,7 +113,7 @@
       .answer
         display block
         padding-top .7rem
-        line-height 1.8
+        line-height 2.4rem
 
         .mobile &
           display none
@@ -105,9 +128,12 @@
         
         .tablet &
           width 17rem
+          padding-top 0
+          padding-bottom 4rem
+          margin-right 1rem
 
         .mobile &
-          width 100%
+          width calc(100% + 1rem)
           padding 0
 
     .row
@@ -137,7 +163,7 @@
 
 .mobile
   .footer--nav
-    margin-top 2.3rem
+    margin-top 1.5rem
     .ac
       padding-bottom 1.6rem
       padding-top 1.6rem
