--- a/templates/src/styl/pages/object.styl
+++ b/templates/src/styl/pages/object.styl
@@ -5,8 +5,10 @@
     flex-direction: column
     width 69rem
     margin 0 auto
+    padding-top 4.4rem
 
   .mobile &
     flex-direction: column
     width 51rem
     margin 0 auto
+    padding-top 5rem
