--- a/templates/src/styl/blocks/object--aside.styl
+++ b/templates/src/styl/blocks/object--aside.styl
@@ -26,7 +26,7 @@
     .tablet &,
     .mobile &
       width 100%
-      padding-bottom 3rem
+      padding-bottom 0rem
 
     &--item
       color $purple
@@ -45,6 +45,11 @@
     border .1rem solid $border
     padding-left 2.1rem
     width 100%
+
+    .tablet &,
+    .mobile &
+        padding-left 3.2rem
+
     &__wrapper
       position relative
       top -0.6rem
@@ -57,20 +62,36 @@
         font-size 1.3rem
         cursor pointer
 
+        .tablet &
+        .mobile &
+          right initial
+          left 13rem
+          top 0
+          
+        .mobile &
+          right initial
+          left 13.5rem
+          top -.2rem
+
   &--address
-    padding 3.2rem 0
+    padding 2rem 0 0
     border-top .1rem solid #f1f1f1
 
     &:nth-child(2)
-      .tablet &,
-      .mobile &
+      .tablet &
         border-right .1rem solid #f1f1f1
         padding-right 4rem
+      
+      .mobile &
+        border-right .1rem solid #f1f1f1
+        padding-right 1.3rem
 
     &:nth-child(3)
-      .tablet &,
-      .mobile &
+      .tablet &
         padding-left 4rem
+
+      .mobile &
+        padding-left 1.6rem
     
     .tablet &
       width 34.5rem
