--- a/templates/src/styl/blocks/object--baner.styl
+++ b/templates/src/styl/blocks/object--baner.styl
@@ -32,6 +32,14 @@
         line-height 1
         position relative
         top 0.7rem
+
+        .tablet &
+          padding 1.4rem 2.3rem 1rem 3rem
+
+        .mobile &
+          padding 1rem 2rem 0 1.2rem
+          
+
       &__big
         padding 1.2rem 3.3rem 0.8rem 2rem
         color $darkgray
@@ -40,9 +48,12 @@
         background #ffffff
         font-size 4.8rem
         line-height 1
+        
     
         .tablet &
           font-size 3.2rem
+          padding 1.2rem 2.9rem 0.8rem 3rem
     
         .mobile &
           font-size 2.6rem
+          padding 0.8rem 1.1rem 0.8rem 1.3rem
